Implementing the update form design

--- a/flask_app/static/style/signup.css
+++ b/flask_app/static/style/signup.css
@@ -135,6 +135,11 @@ body {
     background: #FFF;
     margin: 0;
 }
+
+.form-check > input:invalid {
+    color: red;
+}
+
 .form-check > label {
     display: inline;
     color: #000;
