--- a/flask_app/static/style/style.css
+++ b/flask_app/static/style/style.css
@@ -1,417 +1,560 @@
-* {
-  padding: 0;
-  margin: 0;
-  text-decoration: none;
-  box-sizing: border-box;
+* 
+{
+    padding: 0;
+    margin: 0;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
-:root {
-  --inter-font: inter;
-  --white-color: #f3f6fc;
-  --lilac-color: #8a9ac5;
-  --black-color: #000;
-  --roboto-font: Roboto Slab;
-  --Inria-font: Inria Serif;
-  --button-background-color: #6a7db1;
-  --grey-color: #8b8585;
-  --link-hover-color: #ffd700;
+:root 
+{
+    --inter-font: inter;
+    --white-color: #F3F6FC;
+    --lilac-color: #8A9AC5;
+    --black-color: #000;
+    --roboto-font: Roboto Slab;
+    --Inria-font: Inria Serif;
+    --button-background-color: #6a7db1;
+    --grey-color: #8b8585;
+    --link-hover-color: #FFD700;
 }
 
-body {
-  width: 100%;
-  font-size: 16px;
-  overflow: hidden;
-  background-repeat: no-repeat;
-  background-size: cover;
+body 
+{
+    width: 100%;
+    font-size: 16px;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-body::-webkit-scrollbar {
-  /* display: none; */
-  width: 5px;
-  background: var(--button-background-color);
+body::-webkit-scrollbar
+{
+    /* display: none; */
+    width: 5px;
+    background: var(--button-background-color);
 }
 
-.s-screen {
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 3;
+.s-screen
+{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 3;
 }
 
-.l-screen {
-  display: none;
+.l-screen
+{
+    display: none;
 }
 
-.navBar {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px;
-}
-
-.navBar-bg {
-  background-color: var(--lilac-color);
-}
-
-.navBar h1 > a {
-  color: var(--white-color);
-  font-family: var(--inter-font);
-  font-size: 24px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-}
-
-.navBar i {
-  font-size: 24px;
-  width: 24px;
-  height: 24px;
-  flex-shrink: 0;
-  color: var(--white-color);
-}
-
-.navBarChange {
-  color: var(--white-color) !important;
-}
-
-.navBarChange:hover {
-  color: var(--link-hover-color) !important;
-}
-
-.navBar i:hover {
-  color: var(--lilac-color);
-}
-
-.navDisplay {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-content: center;
-  text-align: center;
-  padding-block: 0;
-  position: absolute;
-  right: 0;
-  z-index: 3;
-  width: 130px;
-  height: 0;
-  flex-shrink: 0;
-  background: var(--white-color);
-  color: var(--black-color);
-  overflow: hidden;
-}
-
-.navDisplay > a {
-  color: var(--black-color);
-  font-family: var(--inter-font);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-}
-
-.navDisplay > a:hover {
-  color: var(--lilac-color);
-  text-decoration: none;
-  cursor: pointer;
-}
-
-.navDisplay .navA:hover {
-  animation: wobble 3s ease-in-out;
-  -webkit-animation: wobble 3s ease-in-out;
-  border-radius: 10px;
-  box-shadow: 2px 2px 2px var(--lilac-color);
-}
-
-@keyframes wobble {
-  0% {
-    transform: scale(1.025);
-    -webkit-transform: scale(1.025);
-    -moz-transform: scale(1.025);
-    -ms-transform: scale(1.025);
-    -o-transform: scale(1.025);
-  }
-
-  25% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-  }
-
-  75% {
-    transform: scale(1.025);
-    -webkit-transform: scale(1.025);
-    -moz-transform: scale(1.025);
-    -ms-transform: scale(1.025);
-    -o-transform: scale(1.025);
-  }
-
-  100% {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-  }
-}
-
-.heroPage {
-  width: 100%;
-  height: 100vh;
-  overflow: hidden;
-  background: url(../images/compressed_a_fountain_pen_on_a_blue_notepad_shot_at_a_cinematic_angle\_blue_aesthetics-min.png),
-    var(--lilac-color) 50% / cover no-repeat;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding-inline: 16px;
-  /* padding-top: 100px; */
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  /* gap: 40px; */
-}
-
-.heroPage::-webkit-scrollbar {
-  /* display: none; */
-  width: 5px;
-  background: var(--button-background-color);
-}
-
-.heroText {
-  /* padding-inline: 16px; */
-  /* padding-top: 100px; */
-  display: flex;
-  margin-bottom: auto;
-  margin-top: auto;
-  /* align-items: center; */
-  text-align: left;
-  flex-direction: column;
-  gap: 40px;
-}
-
-.heroText a {
-  text-decoration: none;
-}
-
-.heroImage {
-  display: none;
-}
-
-.heroText .mainText {
-  color: var(--white-color);
-  font-family: var(--roboto-font);
-  font-size: 48px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 110%; /* 52.8px */
-}
-
-.heroText .subText {
-  color: var(--white-color);
-  font-family: var(--roboto-font);
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: 24px; /* 133.333% */
-}
-
-.heroText button {
-  width: 131px;
-  display: inline-flex;
-  padding: 16px 24px;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border-radius: 32px;
-  background: var(--lilac-color);
-  border: none;
-  color: var(--white-color);
-  font-family: var(--roboto-font);
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 140%; /* 22.4px */
-}
-
-.heroText button:hover {
-  opacity: 0.8;
-  cursor: pointer;
-}
-
-.heroText button > a {
-  color: var(--white-color);
-}
-
-a:active {
-  color: var(--lilac-color);
-}
-
-@media screen and (max-height: 1500px) {
-  .heroPage {
-    overflow: auto;
-    padding-top: 3rem;
-    padding-bottom: 1rem;
-  }
-
-  .navDisplay {
-    overflow-y: auto;
-  }
-
-  body {
-    overflow-y: auto;
-  }
-}
-
-/* Tablet Screen */
-@media screen and (min-width: 768px) {
-  .l-screen {
+.navBar
+{
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    /* padding-inline: 125px; */
-    padding-block: 16px;
-  }
+}
 
-  .s-screen {
-    display: none;
-  }
+.navBar-bg {
+    background-color: var(--lilac-color);
+}
 
-  .l-screen h1 > a {
+.navBar h1 > a, h1
+{
     color: var(--white-color);
-    width: 106px;
     font-family: var(--inter-font);
     font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
-    margin-right: 109px;
-  }
+}
 
-  .l-screen a {
+.navBar i
+{
+    font-size: 24px;
+    width: 24px;
+    height: 24px;
+    flex-shrink: 0;
     color: var(--white-color);
+}
+
+.navBarChange {
+    color: var(--white-color) !important;
+}
+
+.navBarChange:hover {
+    color: var(--link-hover-color) !important;
+}
+
+.navBar i:hover
+{
+    color: var(--lilac-color);
+}
+
+.navDisplay
+{
+    position: absolute;
+    right: 0;
+    z-index: 3;
+    width: 130px;
+    height: 0;
+    background: var(--white-color);
+    color: var(--black-color);
+    overflow: hidden;
+}
+
+.navDisplay ul {
+    list-style-type: none;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
+    text-align: center;
+    padding-block: 0;
+    flex-shrink: 0;
+}
+
+.navDisplay > ul > li
+{
+    width: 100%;
+}
+
+.navDisplay > ul > li a
+{
+    color: var(--black-color);
     font-family: var(--inter-font);
     font-size: 18px;
     font-style: normal;
     font-weight: 500;
     line-height: normal;
-  }
+}
 
-  .l-screen a:hover {
-    color: var(--link-hover-color);
+.navDisplay > ul >li img {
+    width: 24px;
+    /* margin-inline: auto; */
+}
+
+.navDisplay > ul > li:hover
+{
+    color: var(--lilac-color);
     text-decoration: none;
-  }
+    cursor: pointer;
+    animation: wobble 3s ease-in-out;
+    -webkit-animation: wobble 3s ease-in-out;
+    border-radius: 10px;
+    box-shadow: 2px 2px 2px var(--lilac-color);
+}
 
-  .navlinks {
+
+@keyframes wobble
+{
+    0% 
+    {
+        transform: scale(1.025);
+        -webkit-transform: scale(1.025);
+        -moz-transform: scale(1.025);
+        -ms-transform: scale(1.025);
+        -o-transform: scale(1.025);
+    }
+
+    25% 
+    {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+
+    75% 
+    {
+        transform: scale(1.025);
+        -webkit-transform: scale(1.025);
+        -moz-transform: scale(1.025);
+        -ms-transform: scale(1.025);
+        -o-transform: scale(1.025);
+    }
+
+    100% 
+    {
+        transform: scale(1);
+        -webkit-transform: scale(1);
+        -moz-transform: scale(1);
+        -ms-transform: scale(1);
+        -o-transform: scale(1);
+    }
+}
+
+.gearDropdown {
+  width: 260px;
+  padding: 10px;
+  background-color: white;
+  display: none;
+  flex-direction: column;
+  gap: 5px;
+  font-family: "Courier New", Courier, monospace;
+  position: absolute;
+  right: 15px;
+}
+
+.gearDropdown .gearRow {
+  display: flex;
+  align-items: center;
+}
+
+.gearRow img,
+p {
+  margin-right: 10px;
+}
+
+.gearRow .notificationToggle {
+  width: 50px;
+  height: 25px;
+  background-color: var(--toggle-bg);
+  border-radius: 15px;
+  display: flex;
+  /* justify-content: flex-start; */
+  padding: 5px;
+}
+
+.notificationToggle .toggle {
+  width: 50%;
+  height: 100%;
+  border-radius: 100px;
+  /* background-color: var(--lilac-color); */
+}
+
+.toggleOn {
+  background-color: var(--lilac-color);
+}
+
+.toggleContainerOn {
+  justify-content: flex-start;
+}
+
+.toggleOff {
+  background-color: white;
+}
+
+.toggleContainerOff {
+  justify-content: flex-end;
+}
+
+.reminderDetails {
+  padding-left: 28px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.reminderDetails span {
+  font-size: small;
+}
+
+.reminderDays .daysRow {
+  display: flex;
+  gap: 3px;
+}
+
+.heroPage
+{
     width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    background: url(../images/compressed_a_fountain_pen_on_a_blue_notepad_shot_at_a_cinematic_angle\,_blue_aesthetics-min.png), var(--lilac-color) 50% / cover no-repeat;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-inline: 16px;
+    /* padding-top: 100px; */
     display: flex;
-    justify-content: space-between;
     align-items: center;
-  }
+    flex-direction: row;
+    /* gap: 40px; */
+}
 
-  .navlinks button {
+.heroPage::-webkit-scrollbar
+{
+    /* display: none; */
+    width: 5px;
+    background: var(--button-background-color);
+}
+
+.heroText
+{
+    /* padding-inline: 16px; */
+    /* padding-top: 100px; */
+    display: flex;
+    margin-bottom: auto;
+    margin-top: auto;
+    /* align-items: center; */
+    text-align: left;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.heroText a {
+    text-decoration: none;
+}
+
+.heroImage 
+{
+    display: none;
+}
+
+.heroText .mainText 
+{
+    color: var(--white-color);
+    font-family: var(--roboto-font);
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 110%; /* 52.8px */
+}
+
+.heroText .subText 
+{
+    color: var(--white-color);
+    font-family: var(--roboto-font);
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px; /* 133.333% */
+}
+
+.heroText button 
+{
+    width: 131px;
     display: inline-flex;
-    padding: 10px 20px;
+    padding: 16px 24px;
     justify-content: center;
     align-items: center;
     gap: 10px;
     border-radius: 32px;
     background: var(--lilac-color);
     border: none;
-  }
-
-  .navlinks button:hover {
-    opacity: 0.8;
-    color: var(--lilac-color);
-    background-color: var(--link-hover-color);
-  }
-
-  .navlinks button:hover > a {
-    color: var(--lilac-color);
-  }
-
-  .heroImage {
-    display: flex;
-    width: 50%;
-    height: 100%;
-  }
-
-  .heroText {
-    width: 50%;
-  }
-
-  .heroImage img {
-    width: 100%;
-    margin-top: auto;
-    margin-bottom: auto;
-  }
-
-  .heroText {
-    gap: 35px;
-    text-align: left;
-    justify-content: left;
-    padding-inline: 30px;
-    /* align-items: center; */
-  }
-
-  .heroText .mainText {
     color: var(--white-color);
     font-family: var(--roboto-font);
-    font-size: 54px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 110%;
-  }
-
-  .heroText .subText {
-    color: var(--white-color);
-    font-family: var(--roboto-font);
-    font-size: 18px;
+    font-size: 16px;
     font-style: normal;
     font-weight: 700;
-    line-height: 140%; /* 25.2px */
-  }
-
-  .heroText button {
-    width: 167px;
-    display: inline-flex;
-    padding: 16px 32px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    border-radius: 32px;
-    background: var(--lilac-color);
-  }
+    line-height: 140%; /* 22.4px */
 }
-@media screen and (min-width: 1024px) {
-  .l-screen {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 16px;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 3;
-    padding-inline: 125px;
-    padding-block: 16px;
-  }
 
-  .l-screen h1 > a {
-    margin-right: 209px;
-  }
+.heroText button:hover 
+{
+    opacity: 0.8;
+    cursor: pointer;
+}
+
+.heroText button > a
+{
+    color: var(--white-color);
+}
+
+a:active 
+{
+    color: var(--lilac-color);
+}
+
+@media screen and (max-height: 1500px)
+{
+    .heroPage
+    {
+        overflow: auto;
+        padding-top: 3rem;
+        padding-bottom: 1rem;
+    }
+
+    .navDisplay
+    {
+        overflow-y: auto;
+    }
+
+    body
+    {
+        overflow-y: auto;
+    }
+}
+
+
+/* Tablet Screen */
+@media screen and (min-width: 768px) {
+    .l-screen 
+    {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 16px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 1;
+        /* padding-inline: 125px; */
+        padding-block: 16px;
+        gap: 20px;
+    }
+
+    
+    .s-screen 
+    {
+        display: none;
+    }
+    
+    .l-screen h1 > a , h1
+    {
+        color: var(--white-color);
+        /* width: 106px; */
+        font-family: var(--inter-font);
+        font-size: 24px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        /* margin-right: 50px; */
+    }
+    
+    .l-screen a 
+    {
+        color: var(--white-color);
+        font-family: var(--inter-font);
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 500;
+        line-height: normal;
+    }
+    
+    .l-screen a:hover 
+    {
+        color: var(--link-hover-color);
+        text-decoration: none;
+    }
+
+    .navlinks {
+        flex-grow: 2;
+    }
+    
+    .navlinks > ul
+    {
+        /* width: 100%; */
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        list-style-type: none;
+    }
+    
+    .navlinks > ul > li button 
+    {
+        display: inline-flex;
+        padding: 10px 20px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 32px;
+        background: var(--lilac-color);
+        border: none;
+    }
+    
+    .navlinks > ul > li button:hover 
+    {
+        opacity: 0.8;
+        color: var(--lilac-color);
+        background-color: var(--link-hover-color);
+    }
+    
+    .navlinks > ul > li button:hover > a 
+    {
+        color: var(--lilac-color);
+    }
+
+    .heroImage
+    {
+        display: flex;
+        width: 50%;
+        height: 100%;
+    }
+
+    .heroText
+    {
+        width: 50%;
+    }
+
+    .heroImage img
+    {
+        width: 100%;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
+    .heroText 
+    {
+        gap: 35px;
+        text-align: left;
+        justify-content: left;
+        padding-inline: 30px;
+        /* align-items: center; */
+    }
+    
+    .heroText .mainText 
+    {
+        color: var(--white-color);
+        font-family: var(--roboto-font);
+        font-size: 54px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 110%;
+    }
+    
+    .heroText .subText 
+    {
+        color: var(--white-color);
+        font-family: var(--roboto-font);
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 140%; /* 25.2px */
+    }
+    
+    .heroText button 
+    {
+        width: 167px;
+        display: inline-flex;
+        padding: 16px 32px;
+        justify-content: center;
+        align-items: center;
+        gap: 10px;
+        border-radius: 32px;
+        background: var(--lilac-color);
+    }
+}
+@media screen and (min-width: 1024px)
+{
+    .l-screen 
+    {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 60px;
+        padding: 16px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        z-index: 3;
+        padding-inline: 80px;
+        padding-block: 16px;
+    }
+
+    .l-screen h1 > a 
+    {
+        margin-right: 209px;
+    }
 }
 
 /* The styles below apply to other pages that inherit from the layout page */
