--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -74,25 +74,63 @@
     </div>
   </section>
   <section class="profileDetails">
-    <form id="profileForm" action="#" autocomplete="on" method="post">
-      <div class="profileContainer">
-        <div class="row">
-          <div class="col"><label for="firstName">First Name</label></div>
-          <div class="col"><input type="text" /></div>
-        </div>
-        <div class="row">
-          <div class="col"><label for="OtherNames">Other Names</label></div>
-          <div class="col"><input type="text" /></div>
-        </div>
-        <div class="row">
-          <div class="col"><label for="displayName">Display Name</label></div>
-          <div class="col"><input type="text" /></div>
-        </div>
-        <div class="row">
-          <div class="col">
-            <label for="changePassword">Change Password</label>
-          </div>
-          <div class="col"><input type="text" /></div>
+    <form id="profileForm" action="#" autocomplete="on" method="post" enctype="multipart/form-data">
+      {{ form.hidden_tag() }}
+            <fieldset>
+              <legend>
+                Update Account Information
+              </legend>
+              <div class="form-group">
+                {{ form.first_name.label(class="form-control-label") }} {% if
+                form.first_name.errors %} {{ form.first_name(class="form-control
+                form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form.first_name.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form.first_name(class="form-control
+                form-control-lg") }} {% endif %}
+              </div>
+              <div class="form-group">
+                {{ form.last_name.label(class="form-control-label") }} {% if
+                form.last_name.errors %} {{ form.last_name(class="form-control
+                form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form.last_name.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form.last_name(class="form-control form-control-lg")
+                }} {% endif %}
+              </div>
+              <div class="form-group">
+                {{ form.email.label(class="form-control-label") }} {% if
+                form.email.errors %} {{ form.email(class="form-control
+                form-control-lg is-invalid") }}
+                <div class="invalid-feedback">
+                  {% for error in form.email.errors %}
+                  <span>{{ error }}</span>
+                  {% endfor %}
+                </div>
+                {% else %} {{ form.email(class="form-control form-control-lg") }}
+                {% endif %}
+              </div>
+              <div class="form-group">
+                {{ form.picture.label() }}
+                {{ form.picture(class="form-control-file") }}
+                {% if form.picture.errors %}
+                  {% for error in form.picture.errors %}
+                    <span class="text-danger">{{ error }}</span></br>
+                    {% endfor %}
+                {% endif %}
+            </div>
+              <div class="form-group">
+                {{ form.submit_to_update(class="btn btn-outline-info
+                submitForm") }}
+              </div>
+            </fieldset>
+          </form>
         </div>
       </div>
       <button type="submit">
