--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -54,15 +54,13 @@
   <section class="profilePic">
     <div class="profilePicContainer">
       <form action="#">
-        <div>
-          <label for="profileImg">
-            <div class="media">
-              <img
-                class="rounded-circle profileImg"
-                src="{{ image_file }}"
-                alt="user profile pic"
-              />
-            </div>
+        <div class="profileImg">
+          <label for="profileImg"
+            ><img
+              class="rounded-circle profileImg"
+              src="{{ image_file }}"
+              alt="user profile pic"
+            />
           </label>
           <input type="file" name="profileImg" id="profileImg" />
         </div>
@@ -82,6 +80,7 @@
   <section>
     <div class="profileForm">
       <form id="profileForm" action="#" autocomplete="on" method="post">
+        <div class="closeFormContainer"><i class="closeForm">X</i></div>
         <h1>Update Your Profile</h1>
         <div class="profileContainer">
           <div class="row">
