--- a/flask_app/templates/features.html
+++ b/flask_app/templates/features.html
@@ -4,7 +4,7 @@
 <div class="container">
   <header id="header" onclick="closeFeatures()">
     <div class="logoHeader">
-      <img src="../static/images/icons/bell.svg" alt="" />
+      <!-- <img src="../static/images/icons/bell.svg" alt="" /> -->
 
       <div class="profilePic">
         <img src="{{ image_file }}" alt="user profile pic" />
@@ -19,7 +19,7 @@
           <img src="../static/images/frame.svg" alt="" />
         </div>
         <div class="listDisplay">
-          <ul>
+          <ul class="list">
             <li id="ghostWriting" class="feature" href="#">
               Ghostwriting A.I.
             </li>
@@ -61,59 +61,78 @@
               </div>
             </div>
             <div class="ghostWrittingtools">
-              <ul>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/italic.svg"
-                    alt="Italic Icon"
-                  />
-                  <p>Italic</p>
+              <ul class="toolsList">
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/italic.svg"
+                      alt="Italic Icon"
+                    />
+                    <p>Italic</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/fontStyle.svg"
-                    alt="Font Style Icon"
-                  />
-                  <p>Font Style</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/fontStyle.svg"
+                      alt="Font Style Icon"
+                    />
+                    <p>Font Style</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/fontColor.svg"
-                    alt="Font Color Icon"
-                  />
-                  <p>Font Color</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/fontColor.svg"
+                      alt="Font Color Icon"
+                    />
+                    <p>Font Color</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/fontSize.svg"
-                    alt="Font Size Icon"
-                  />
-                  <p>Font Size</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/fontSize.svg"
+                      alt="Font Size Icon"
+                    />
+                    <p>Font Size</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img src="../static/images/icons/bold.svg" alt="Bold Icon" />
-                  <p>Bold</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/bold.svg"
+                      alt="Bold Icon"
+                    />
+                    <p>Bold</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/underline.svg"
-                    alt="Underline Icon"
-                  />
-                  <p>Underline</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/underline.svg"
+                      alt="Underline Icon"
+                    />
+                    <p>Underline</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/highlight.svg"
-                    alt="Highlight Color Icon"
-                  />
-                  <p>Highlight Color</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/highlight.svg"
+                      alt="Highlight Color Icon"
+                    />
+                    <p>Highlight Color</p>
+                  </div>
                 </li>
-                <li href="#">
-                  <img
-                    src="../static/images/icons/orientation.svg"
-                    alt="Orientation Icon"
-                  />
-                  <p>Orientation</p>
+                <li class="tool">
+                  <div class="toolContent">
+                    <img
+                      src="../static/images/icons/orientation.svg"
+                      alt="Orientation Icon"
+                    />
+                    <p>Orientation</p>
+                  </div>
                 </li>
               </ul>
             </div>
