--- a/flask_app/static/style/signin.css
+++ b/flask_app/static/style/signin.css
@@ -32,7 +32,7 @@ body {
     background-size: cover;
 }
 
-.container {
+.main-container {
     width: 100%;
     height: 100vh;
     display: flex;
@@ -46,7 +46,7 @@ body {
     overflow: auto;
 }
 
-.container .mainContainer {
+.main-container .mainContainer {
     width: auto;
     height: auto;
     background-color: var(--white-color);
@@ -230,20 +230,20 @@ body {
     line-height: normal;
     margin-bottom: 25px;
 }
-.container a:hover {
+.main-container a:hover {
     color: #8A9AC5;
 }
 
-.container button:hover {
+.main-container button:hover {
     opacity: 0.8;
 }
 
 /* Tablet Screen */
 @media screen and (min-width: 768px) {
-    .container label {
+    .main-container label {
         font-size: var(--font-size-l);
     }
-    .container input {
+    .main-container input {
         font-size: var(--font-size-l);
     }
     span {
@@ -256,10 +256,10 @@ body {
 
 /* Laptop Screen */
 @media screen and (min-width: 1024px) {
-    .container label {
+    .main-container label {
         font-size: var(--font-size-xl);
     }
-    .container input {
+    .main-container input {
         font-size: var(--font-size-xl);
     }
     span {
@@ -269,10 +269,10 @@ body {
 
 /* Large screen */
 @media screen and (min-width: 1444px) {
-    .container label {
+    .main-container label {
         font-size: var(--font-size-xxl);
     }
-    .container input {
+    .main-container input {
         font-size: var(--font-size-xxl);
     }
     span {
