Modifying class name due to styling issue

--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block head %}
 <link rel="stylesheet" href="../static/style/account.css" />
 {% endblock head %}{% block body %}
-<div class="container">
+<div class="main-container">
   <!-- <header>
     <div class="header">
       <img
