--- a/flask_app/templates/features.html
+++ b/flask_app/templates/features.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %} {% block head %}
 <link rel="stylesheet" href="../static/style/features.css" />
 {% endblock head %}{% block body %}
-<div class="container">
+<div class="main-container">
   <header id="header" onclick="closeFeatures()">
     <div class="logoHeader">
       <!-- <img src="../static/images/icons/bell.svg" alt="" /> -->
