--- a/flask_app/templates/signin.html
+++ b/flask_app/templates/signin.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="../static/style/signin.css" />
 {% endblock head %}{% block body %}
 <section>
-  <div class="container">
+  <div class="main-container">
     <div class="mainContainer">
       <h4>Sign in to get back to jump back into your creative process!</h4>
       <button>
