--- a/flask_app/templates/signup.html
+++ b/flask_app/templates/signup.html
@@ -6,7 +6,7 @@
     <div class="profileImg"></div>
   </nav>
   <section>
-    <div class="container">
+    <div class="main-container">
       <div class="signUpForm">
         <form action="" id="signup_form" autocomplete="on" method="POST">
           {{ form.hidden_tag() }}
